lib/parser.output
Terminals unused in grammar

    SINGLE_QUOTE
    DOUBLE_QUOTE


Grammar

    0 $accept: recipe $end

    1 recipe: statements

    2 statements: statement
    3           | statement statements

    4 statement: block_stmt
    5          | sli_stmt
    6          | mli_stmt
    7          | addtask_stmt
    8          | export_stmt
    9          | conf_stmt

   10 block_stmt: BLOCK_START block_expr
   11           | FAKEROOT BLOCK_START block_expr
   12           | PYTHON BLOCK_START block_expr
   13           | FAKEROOT PYTHON BLOCK_START block_expr

   14 block_expr: BLOCK_CONTENT
   15           | BLOCK_CONTENT block_expr

   16 conf_stmt: WORD assign_op STRING
   17          | WORD '[' WORD ']' assign_op STRING

   18 assign_op: PREDOT_ASSIGN
   19          | POSTDOT_ASSIGN
   20          | PREPEND_ASSIGN
   21          | APPEND_ASSIGN
   22          | COLON_ASSIGN
   23          | QUES_ASSIGN
   24          | LAZYQUES_ASSIGN
   25          | ASSIGN

   26 export_stmt: EXPORT conf_stmt
   27            | EXPORT WORD

   28 sli_stmt: sli_id SLI_CONTENT
   29         | sli_id SLI_CONTENT '[' SLI_CONTENT ']'

   30 sli_id: UNSET

   31 mli_stmt: mli_id mli_expr

   32 mli_id: INHERIT
   33       | INCLUDE
   34       | REQUIRE
   35       | DELTASK
   36       | EXPORT_FUNCTIONS

   37 mli_expr: MLI_CONTENT
   38         | MLI_CONTENT STRING_CONTINUATION mli_expr

   39 addtask_stmt: ADDTASK addtask_expr

   40 addtask_expr: ADDTASK_CONTENT
   41             | addtask_expr ADDTASK_AFTER ADDTASK_CONTENT
   42             | addtask_expr ADDTASK_BEFORE ADDTASK_CONTENT


Terminals, with rules where they appear

    $end (0) 0
    '[' (91) 17 29
    ']' (93) 17 29
    error (256)
    FAKEROOT (258) 11 13
    PYTHON (259) 12 13
    EXPORT (260) 26 27
    PREDOT_ASSIGN (261) 18
    POSTDOT_ASSIGN (262) 19
    PREPEND_ASSIGN (263) 20
    APPEND_ASSIGN (264) 21
    COLON_ASSIGN (265) 22
    QUES_ASSIGN (266) 23
    LAZYQUES_ASSIGN (267) 24
    ASSIGN (268) 25
    ADDTASK (269) 39
    ADDTASK_AFTER (270) 41
    ADDTASK_BEFORE (271) 42
    UNSET (272) 30
    ADDTASK_CONTENT <sval> (273) 40 41 42
    BLOCK_START <sval> (274) 10 11 12 13
    BLOCK_CONTENT <sval> (275) 14 15
    SLI_CONTENT <sval> (276) 28 29
    MLI_CONTENT <sval> (277) 37 38
    WORD <sval> (278) 16 17 27
    STRING <sval> (279) 16 17
    STRING_CONTINUATION <sval> (280) 38
    SINGLE_QUOTE <ival> (281)
    DOUBLE_QUOTE <ival> (282)
    INHERIT <ival> (283) 32
    INCLUDE <ival> (284) 33
    REQUIRE <ival> (285) 34
    DELTASK <ival> (286) 35
    EXPORT_FUNCTIONS <ival> (287) 36


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    recipe <node> (36)
        on left: 1
        on right: 0
    statements <node> (37)
        on left: 2 3
        on right: 1 3
    statement <node> (38)
        on left: 4 5 6 7 8 9
        on right: 2 3
    block_stmt <node> (39)
        on left: 10 11 12 13
        on right: 4
    block_expr <sval> (40)
        on left: 14 15
        on right: 10 11 12 13 15
    conf_stmt <node> (41)
        on left: 16 17
        on right: 9 26
    assign_op <node> (42)
        on left: 18 19 20 21 22 23 24 25
        on right: 16 17
    export_stmt <node> (43)
        on left: 26 27
        on right: 8
    sli_stmt <node> (44)
        on left: 28 29
        on right: 5
    sli_id <ival> (45)
        on left: 30
        on right: 28 29
    mli_stmt <node> (46)
        on left: 31
        on right: 6
    mli_id <node> (47)
        on left: 32 33 34 35 36
        on right: 31
    mli_expr <sval> (48)
        on left: 37 38
        on right: 31 38
    addtask_stmt <node> (49)
        on left: 39
        on right: 7
    addtask_expr <node> (50)
        on left: 40 41 42
        on right: 39 41 42


State 0

    0 $accept: . recipe $end

    FAKEROOT          shift, and go to state 1
    PYTHON            shift, and go to state 2
    EXPORT            shift, and go to state 3
    ADDTASK           shift, and go to state 4
    UNSET             shift, and go to state 5
    BLOCK_START       shift, and go to state 6
    WORD              shift, and go to state 7
    INHERIT           shift, and go to state 8
    INCLUDE           shift, and go to state 9
    REQUIRE           shift, and go to state 10
    DELTASK           shift, and go to state 11
    EXPORT_FUNCTIONS  shift, and go to state 12

    recipe        go to state 13
    statements    go to state 14
    statement     go to state 15
    block_stmt    go to state 16
    conf_stmt     go to state 17
    export_stmt   go to state 18
    sli_stmt      go to state 19
    sli_id        go to state 20
    mli_stmt      go to state 21
    mli_id        go to state 22
    addtask_stmt  go to state 23


State 1

   11 block_stmt: FAKEROOT . BLOCK_START block_expr
   13           | FAKEROOT . PYTHON BLOCK_START block_expr

    PYTHON       shift, and go to state 24
    BLOCK_START  shift, and go to state 25


State 2

   12 block_stmt: PYTHON . BLOCK_START block_expr

    BLOCK_START  shift, and go to state 26


State 3

   26 export_stmt: EXPORT . conf_stmt
   27            | EXPORT . WORD

    WORD  shift, and go to state 27

    conf_stmt  go to state 28


State 4

   39 addtask_stmt: ADDTASK . addtask_expr

    ADDTASK_CONTENT  shift, and go to state 29

    addtask_expr  go to state 30


State 5

   30 sli_id: UNSET .

    $default  reduce using rule 30 (sli_id)


State 6

   10 block_stmt: BLOCK_START . block_expr

    BLOCK_CONTENT  shift, and go to state 31

    block_expr  go to state 32


State 7

   16 conf_stmt: WORD . assign_op STRING
   17          | WORD . '[' WORD ']' assign_op STRING

    PREDOT_ASSIGN    shift, and go to state 33
    POSTDOT_ASSIGN   shift, and go to state 34
    PREPEND_ASSIGN   shift, and go to state 35
    APPEND_ASSIGN    shift, and go to state 36
    COLON_ASSIGN     shift, and go to state 37
    QUES_ASSIGN      shift, and go to state 38
    LAZYQUES_ASSIGN  shift, and go to state 39
    ASSIGN           shift, and go to state 40
    '['              shift, and go to state 41

    assign_op  go to state 42


State 8

   32 mli_id: INHERIT .

    $default  reduce using rule 32 (mli_id)


State 9

   33 mli_id: INCLUDE .

    $default  reduce using rule 33 (mli_id)


State 10

   34 mli_id: REQUIRE .

    $default  reduce using rule 34 (mli_id)


State 11

   35 mli_id: DELTASK .

    $default  reduce using rule 35 (mli_id)


State 12

   36 mli_id: EXPORT_FUNCTIONS .

    $default  reduce using rule 36 (mli_id)


State 13

    0 $accept: recipe . $end

    $end  shift, and go to state 43


State 14

    1 recipe: statements .

    $default  reduce using rule 1 (recipe)


State 15

    2 statements: statement .
    3           | statement . statements

    FAKEROOT          shift, and go to state 1
    PYTHON            shift, and go to state 2
    EXPORT            shift, and go to state 3
    ADDTASK           shift, and go to state 4
    UNSET             shift, and go to state 5
    BLOCK_START       shift, and go to state 6
    WORD              shift, and go to state 7
    INHERIT           shift, and go to state 8
    INCLUDE           shift, and go to state 9
    REQUIRE           shift, and go to state 10
    DELTASK           shift, and go to state 11
    EXPORT_FUNCTIONS  shift, and go to state 12

    $default  reduce using rule 2 (statements)

    statements    go to state 44
    statement     go to state 15
    block_stmt    go to state 16
    conf_stmt     go to state 17
    export_stmt   go to state 18
    sli_stmt      go to state 19
    sli_id        go to state 20
    mli_stmt      go to state 21
    mli_id        go to state 22
    addtask_stmt  go to state 23


State 16

    4 statement: block_stmt .

    $default  reduce using rule 4 (statement)


State 17

    9 statement: conf_stmt .

    $default  reduce using rule 9 (statement)


State 18

    8 statement: export_stmt .

    $default  reduce using rule 8 (statement)


State 19

    5 statement: sli_stmt .

    $default  reduce using rule 5 (statement)


State 20

   28 sli_stmt: sli_id . SLI_CONTENT
   29         | sli_id . SLI_CONTENT '[' SLI_CONTENT ']'

    SLI_CONTENT  shift, and go to state 45


State 21

    6 statement: mli_stmt .

    $default  reduce using rule 6 (statement)


State 22

   31 mli_stmt: mli_id . mli_expr

    MLI_CONTENT  shift, and go to state 46

    mli_expr  go to state 47


State 23

    7 statement: addtask_stmt .

    $default  reduce using rule 7 (statement)


State 24

   13 block_stmt: FAKEROOT PYTHON . BLOCK_START block_expr

    BLOCK_START  shift, and go to state 48


State 25

   11 block_stmt: FAKEROOT BLOCK_START . block_expr

    BLOCK_CONTENT  shift, and go to state 31

    block_expr  go to state 49


State 26

   12 block_stmt: PYTHON BLOCK_START . block_expr

    BLOCK_CONTENT  shift, and go to state 31

    block_expr  go to state 50


State 27

   16 conf_stmt: WORD . assign_op STRING
   17          | WORD . '[' WORD ']' assign_op STRING
   27 export_stmt: EXPORT WORD .

    PREDOT_ASSIGN    shift, and go to state 33
    POSTDOT_ASSIGN   shift, and go to state 34
    PREPEND_ASSIGN   shift, and go to state 35
    APPEND_ASSIGN    shift, and go to state 36
    COLON_ASSIGN     shift, and go to state 37
    QUES_ASSIGN      shift, and go to state 38
    LAZYQUES_ASSIGN  shift, and go to state 39
    ASSIGN           shift, and go to state 40
    '['              shift, and go to state 41

    $default  reduce using rule 27 (export_stmt)

    assign_op  go to state 42


State 28

   26 export_stmt: EXPORT conf_stmt .

    $default  reduce using rule 26 (export_stmt)


State 29

   40 addtask_expr: ADDTASK_CONTENT .

    $default  reduce using rule 40 (addtask_expr)


State 30

   39 addtask_stmt: ADDTASK addtask_expr .
   41 addtask_expr: addtask_expr . ADDTASK_AFTER ADDTASK_CONTENT
   42             | addtask_expr . ADDTASK_BEFORE ADDTASK_CONTENT

    ADDTASK_AFTER   shift, and go to state 51
    ADDTASK_BEFORE  shift, and go to state 52

    $default  reduce using rule 39 (addtask_stmt)


State 31

   14 block_expr: BLOCK_CONTENT .
   15           | BLOCK_CONTENT . block_expr

    BLOCK_CONTENT  shift, and go to state 31

    $default  reduce using rule 14 (block_expr)

    block_expr  go to state 53


State 32

   10 block_stmt: BLOCK_START block_expr .

    $default  reduce using rule 10 (block_stmt)


State 33

   18 assign_op: PREDOT_ASSIGN .

    $default  reduce using rule 18 (assign_op)


State 34

   19 assign_op: POSTDOT_ASSIGN .

    $default  reduce using rule 19 (assign_op)


State 35

   20 assign_op: PREPEND_ASSIGN .

    $default  reduce using rule 20 (assign_op)


State 36

   21 assign_op: APPEND_ASSIGN .

    $default  reduce using rule 21 (assign_op)


State 37

   22 assign_op: COLON_ASSIGN .

    $default  reduce using rule 22 (assign_op)


State 38

   23 assign_op: QUES_ASSIGN .

    $default  reduce using rule 23 (assign_op)


State 39

   24 assign_op: LAZYQUES_ASSIGN .

    $default  reduce using rule 24 (assign_op)


State 40

   25 assign_op: ASSIGN .

    $default  reduce using rule 25 (assign_op)


State 41

   17 conf_stmt: WORD '[' . WORD ']' assign_op STRING

    WORD  shift, and go to state 54


State 42

   16 conf_stmt: WORD assign_op . STRING

    STRING  shift, and go to state 55


State 43

    0 $accept: recipe $end .

    $default  accept


State 44

    3 statements: statement statements .

    $default  reduce using rule 3 (statements)


State 45

   28 sli_stmt: sli_id SLI_CONTENT .
   29         | sli_id SLI_CONTENT . '[' SLI_CONTENT ']'

    '['  shift, and go to state 56

    $default  reduce using rule 28 (sli_stmt)


State 46

   37 mli_expr: MLI_CONTENT .
   38         | MLI_CONTENT . STRING_CONTINUATION mli_expr

    STRING_CONTINUATION  shift, and go to state 57

    $default  reduce using rule 37 (mli_expr)


State 47

   31 mli_stmt: mli_id mli_expr .

    $default  reduce using rule 31 (mli_stmt)


State 48

   13 block_stmt: FAKEROOT PYTHON BLOCK_START . block_expr

    BLOCK_CONTENT  shift, and go to state 31

    block_expr  go to state 58


State 49

   11 block_stmt: FAKEROOT BLOCK_START block_expr .

    $default  reduce using rule 11 (block_stmt)


State 50

   12 block_stmt: PYTHON BLOCK_START block_expr .

    $default  reduce using rule 12 (block_stmt)


State 51

   41 addtask_expr: addtask_expr ADDTASK_AFTER . ADDTASK_CONTENT

    ADDTASK_CONTENT  shift, and go to state 59


State 52

   42 addtask_expr: addtask_expr ADDTASK_BEFORE . ADDTASK_CONTENT

    ADDTASK_CONTENT  shift, and go to state 60


State 53

   15 block_expr: BLOCK_CONTENT block_expr .

    $default  reduce using rule 15 (block_expr)


State 54

   17 conf_stmt: WORD '[' WORD . ']' assign_op STRING

    ']'  shift, and go to state 61


State 55

   16 conf_stmt: WORD assign_op STRING .

    $default  reduce using rule 16 (conf_stmt)


State 56

   29 sli_stmt: sli_id SLI_CONTENT '[' . SLI_CONTENT ']'

    SLI_CONTENT  shift, and go to state 62


State 57

   38 mli_expr: MLI_CONTENT STRING_CONTINUATION . mli_expr

    MLI_CONTENT  shift, and go to state 46

    mli_expr  go to state 63


State 58

   13 block_stmt: FAKEROOT PYTHON BLOCK_START block_expr .

    $default  reduce using rule 13 (block_stmt)


State 59

   41 addtask_expr: addtask_expr ADDTASK_AFTER ADDTASK_CONTENT .

    $default  reduce using rule 41 (addtask_expr)


State 60

   42 addtask_expr: addtask_expr ADDTASK_BEFORE ADDTASK_CONTENT .

    $default  reduce using rule 42 (addtask_expr)


State 61

   17 conf_stmt: WORD '[' WORD ']' . assign_op STRING

    PREDOT_ASSIGN    shift, and go to state 33
    POSTDOT_ASSIGN   shift, and go to state 34
    PREPEND_ASSIGN   shift, and go to state 35
    APPEND_ASSIGN    shift, and go to state 36
    COLON_ASSIGN     shift, and go to state 37
    QUES_ASSIGN      shift, and go to state 38
    LAZYQUES_ASSIGN  shift, and go to state 39
    ASSIGN           shift, and go to state 40

    assign_op  go to state 64


State 62

   29 sli_stmt: sli_id SLI_CONTENT '[' SLI_CONTENT . ']'

    ']'  shift, and go to state 65


State 63

   38 mli_expr: MLI_CONTENT STRING_CONTINUATION mli_expr .

    $default  reduce using rule 38 (mli_expr)


State 64

   17 conf_stmt: WORD '[' WORD ']' assign_op . STRING

    STRING  shift, and go to state 66


State 65

   29 sli_stmt: sli_id SLI_CONTENT '[' SLI_CONTENT ']' .

    $default  reduce using rule 29 (sli_stmt)


State 66

   17 conf_stmt: WORD '[' WORD ']' assign_op STRING .

    $default  reduce using rule 17 (conf_stmt)
